endpoint reload caché
